# chip8

./: .gitignore  CHANGELOG.md  Cargo.toml  Chip8.uproject  LICENSE  README.md  build.rs  chip8-11827a2277ff2091.js  chip8-11827a2277ff2091_bg.wasm  chip8-274f3c1f99f53622.js  chip8-274f3c1f99f53622_bg.wasm  chip8-b1c5591d1fbc6d4a.js  chip8-b1c5591d1fbc6d4a_bg.wasm  chip8-c60054bd0377164f.js  chip8-c60054bd0377164f_bg.wasm  chip8-ff24651aa3570674.js  chip8-ff24651aa3570674_bg.wasm  index.html  manifest.json  notes.md  rust-toolchain  sw.js
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  pages.yml  rust.yml
Config/: DefaultEngine.ini  DefaultGame.ini
Content/Audio/: MS_Beep.uasset
Content/Blueprints/: B_C8Visualizer.uasset  B_TestActor.uasset
Content/Blueprints/Player/: B_PlayerPawn.uasset
Content/Blueprints/System/: GM_Chip8.uasset
Content/Input/: IMC_Default.uasset
Content/Input/Actions/: IA_0.uasset  IA_1.uasset  IA_2.uasset  IA_3.uasset  IA_4.uasset  IA_5.uasset  IA_6.uasset  IA_7.uasset  IA_8.uasset  IA_9.uasset  IA_A.uasset  IA_B.uasset  IA_C.uasset  IA_D.uasset  IA_E.uasset  IA_F.uasset
Content/Maps/: L_MainMap.umap
Content/Materials/: MI_Pixel.uasset  M_Pixel.uasset
Content/Meshes/: SM_Cube.uasset
Content/Roms/: 1-chip8-logo.uasset  3-corax.uasset  6-keypad.uasset  Airplane.uasset  Animal_Race__Brian_Astle_.uasset  test_opcode.uasset
Content/Roms/Tests/: 1-chip8-logo.uasset  2-ibm-logo.uasset  3-corax.uasset  4-flags.uasset  5-quirks.uasset  6-keypad.uasset  7-beep.uasset  8-scrolling.uasset
Source/: Chip8.Target.cs  Chip8Editor.Target.cs
Source/Chip8/: C8Device.cpp  C8Device.h  Chip8.Build.cs
Source/Chip8/Private/: C8Device.cpp  C8Visualizer.cpp  Chip8.cpp
Source/Chip8/Private/Data/: C8ROM.cpp
Source/Chip8/Public/: C8Device.h  C8Visualizer.h
Source/Chip8/Public/Data/: C8ROM.h
Source/Chip8Editor/: Chip8Editor.Build.cs
Source/Chip8Editor/Private/: Chip8Editor.cpp
Source/Chip8Editor/Private/AssetActions/: C8ROMAssetActions.cpp
Source/Chip8Editor/Private/Factory/: C8ROMFactory.cpp
Source/Chip8Editor/Public/: Chip8Editor.h
Source/Chip8Editor/Public/AssetActions/: C8ROMAssetActions.h
Source/Chip8Editor/Public/Factory/: C8ROMFactory.h
art/: Chip8Icon.xcf
assets/games/glitch-ghost/: prog.ch8
assets/games/octo-sample/: prog.8o
assets/games/skyward/: readme.md  skyward.8o
benches/: match_benchmark.rs  pixel_benchmark.rs
crates/c8/: Cargo.toml
crates/c8/src/: cpu.rs  device.rs  display.rs  keypad.rs  lib.rs  memory.rs  message.rs  quirks.rs
crates/c8/src/audio/: audio_settings.rs  mod.rs  null_audio.rs  tiny_audio.rs
crates/c8_audio/: Cargo.toml
crates/c8_audio/src/: audio_settings.rs  beeper.rs  desktop_audio.rs  device_audio.rs  lib.rs  sound.rs  tiny_audio.rs  web_audio.rs
crates/c8_compiler/: Cargo.toml
crates/c8_compiler/src/: main.rs
crates/c8_device/: Cargo.toml
crates/c8_device/src/: cpu.rs  device.rs  display.rs  fonts.rs  keyboard.rs  keypad.rs  lib.rs  memory.rs  message.rs  quirks.rs
crates/c8_device/src/audio/: audio_settings.rs
crates/c8_i18n/: Cargo.toml
crates/c8_i18n/locales/en-US/: main.ftl
crates/c8_i18n/src/: lib.rs  locale.rs  locale_text.rs  localization.rs
crates/c8_player/: Cargo.toml  build.rs  index.html
crates/c8_player/src/: lib.rs  main.rs  settings.rs
crates/c8_studio/: Cargo.toml  index.html
crates/c8_studio/src/: main.rs  roms.rs
crates/c8_studio/src/app/: app_ui.rs  pixel_color.rs
crates/c8asm/: Cargo.toml
crates/observer/: Cargo.toml
crates/observer/src/: lib.rs  observer.rs
credits/: credits.md
locales/en-US/: main.ftl
src/: app.rs  c8.rs  c8device.rs  display.rs  input.rs  lib.rs  localization.rs  main.rs  roms.rs  ui.rs
src/app/: app.rs  app_ui.rs  keyboard.rs  mod.rs  pixel_color.rs
src/device/: c8.rs  cpu.rs  display.rs  mod.rs
