[package]
name = "chip8"
version = "0.1.16"
authors = ["James Lennon"]
edition = "2021"
publish = false
build = "build.rs"
exclude = [
    # Exclude source art assets
    "art/**/*",
]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"
unsafe_code = "deny"

[workspace.dependencies]
c8_audio = { path = "crates/c8_audio" }
c8_device = { path = "crates/c8_device" }
c8_i18n = { path = "crates/c8_i18n" }

# Accessibility
fluent = "0.16"
fluent-templates = "0.10"
unic-langid = "0.9"

# Random number generator
rand = { version = "0.8" }

# Serialization
ron = "0.8"
serde = { version = "1", features = ["derive"] }

# Web
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
futures = "0.3"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
rfd = "0.14"


fluent = { workspace = true }
fluent-templates = { workspace = true }
unic-langid = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
c8_audio = { workspace = true }
c8_device = { workspace = true }
c8_i18n = { workspace = true }

futures = { workspace = true }


[build-dependencies]
embed-resource = { version = "2.4" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { workspace = true }

[[bench]]
name = "pixel_benchmark"
harness = false

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"


# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"


[profile.release]
opt-level = 3
lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3
