[package]
name = "chip8"
version = "0.1.19"
authors = ["James Lennon"]
edition = "2021"
publish = false
exclude = [
    # Exclude source art assets
    "art/**/*",
]


[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
#pedantic = "warn"

[workspace.dependencies]
# Local crates
c8 = { path = "crates/c8" }
c8_i18n = { path = "crates/c8_i18n" }
c8_player = { path = "crates/c8_player" }
c8_studio = { path = "crates/c8_studio" }


# Accessibility
fluent = "0.16"
fluent-templates = "0.13"
unic-langid = "0.9"

# Random number generator
rand = { version = "0.9" }

# Serialization
ron = "0.8"
serde = { version = "1", features = ["derive"] }

# Web
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = "0.3"
futures = "0.3"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { workspace = true }


[[bench]]
name = "match_benchmark"
harness = false


[profile.dev]
#opt-level = 1

[profile.release]
opt-level = 3
lto = true

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 3

[features]
#default = ["profiling"]
#default = []
#profiling = []
