[package]
name = "c8"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
serde = { workspace = true, optional = true }
tinyaudio = { version = "2", optional = true }

[lints]
workspace = true

[lib]
test = true
doctest = true

[features]
default = ["serde", "audio"]
serde = ["dep:serde"]
audio = ["dep:tinyaudio"]
