[package]
name = "c8_audio"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = { version = "0.15", features = ["wasm-bindgen"] }
wasm-bindgen = { workspace = true }
web-sys = { version = "*", features = [
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioNode",
    "AudioDestinationNode",
    "console",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[lints]
workspace = true
