[package]
name = "c8_audio"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = { version = "0.15" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioNode",
    "AudioDestinationNode",
    "console",
] }

[lints]
workspace = true
