[package]
name = "c8_device"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
c8_audio = { workspace = true }
serde = { workspace = true, optional = true }
puffin = { workspace = true, optional = true }

[lints]
workspace = true

[lib]
test = true
doctest = true

[features]
default = ["serde"]
#default = ["serde", "enable_puffin"]
serde = ["dep:serde"]
enable_puffin = ["dep:puffin"]
