[package]
name = "c8_studio"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lints]
#workspace = true

[dependencies]
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",
] }
log = "0.4"
rfd = { version = "0.15" }


c8 = { workspace = true }
c8_i18n = { workspace = true }

serde = { workspace = true }
fluent = { workspace = true }
fluent-templates = { workspace = true }
unic-langid = { workspace = true }
ron = { workspace = true }
futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }


[build-dependencies]
embed-resource = { version = "3.0" }
